# babel

./: .clangd  .gitignore  CMakeLists.txt  README.MD  babel.db  conanfile.txt  install.ps1  install.sh  shell.nix  xorg_wrappers.nix
.github/workflows/: build.yml  cmake.yml
client/: Client.cpp  Client.hpp  ClientError.hpp  ClientManager.cpp  ClientManager.hpp  Display.cpp  Display.hpp  Event.hpp  EventManager.cpp  EventManager.hpp  Message.cpp  Message.hpp  main.cpp  utils.cpp  utils.hpp
client/audio/: Audio.hpp  AudioCodec.hpp  AudioSettings.cpp  AudioSettings.hpp  AudioSocket.hpp  DecodedAudio.hpp  OpusCodec.cpp  OpusCodec.hpp  PortAudio.cpp  PortAudio.hpp  QtAudioSocket.cpp  QtAudioSocket.hpp
client/displays/: Display.hpp  DisplaySettings.hpp  QDisplay.cpp  QDisplay.hpp
client/entities/: ChatBox.cpp  ChatBox.hpp  ClickableHBoxLayout.cpp  ClickableHBoxLayout.hpp  Contact.cpp  Contact.hpp  Icon.cpp  Icon.hpp  MessageBox.cpp  MessageBox.hpp  NamedTextField.cpp  NamedTextField.hpp  Window.cpp  Window.hpp
client/network/: QtSocket.cpp  QtSocket.hpp  Socket.hpp  Transporter.cpp  Transporter.hpp
client/scenes/: ChatBoxScene.cpp  ChatBoxScene.hpp  ChatInfoScene.cpp  ChatInfoScene.hpp  ChatScene.cpp  ChatScene.hpp  ContactScene.cpp  ContactScene.hpp  LoggingScene.cpp  LoggingScene.hpp  MainScene.cpp  MainScene.hpp  Scene.hpp  SceneError.hpp  SceneManager.cpp  SceneManager.hpp  SearchScene.cpp  SearchScene.hpp  (+2 more)
documentation/: CLIENT_UML.MD  RFC.txt  SERVER_UML.MD  SERVER_UMLD.MD
protocol/: Deserializer.cpp  Deserializer.hpp  Packet.hpp  PacketHandler.hpp  PacketManager.cpp  PacketManager.hpp  PacketType.hpp  Serializer.cpp  Serializer.hpp
server/: Client.cpp  Client.hpp  ClientManager.hpp  Database.hpp  DatabaseError.hpp  EventManager.cpp  EventManager.hpp  IoClient.cpp  IoClient.hpp  Message.cpp  Message.hpp  Server.cpp  Server.hpp  ServerManager.cpp  ServerManager.hpp  Transporter.hpp  TransporterError.hpp  main.cpp
(+71 files in other folders)
